<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Munchkin Companion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_level_menu">Level Menu</string>
    <string name="modifier_string">Modifier</string>
    <string name="combat_string">Combat</string>
    <string name="gear_string">Gear</string>
    <string name="level_string">Level</string>
    <string name="fight_string">Fight</string>
    <string name="run_away_string">Run Away</string>
    <string name="monster_string">Monster</string>

    <string name="munchkin_brown">#4A1812</string>
    <string name="strength_string">Strength</string>
    <string name="add_player_string">Add Player</string>
    <string name="dice_roll_string">Dice</string>
    <string name="m_string">M</string>

    <string name="title_new_game_string">NEW GAME</string>
    <string name="title_about_string">About</string>
    <string name="title_buy_string">Remove Ads</string>

    <string name="about_back_string">"Back"</string>
    <string name="about_string_1">Made (with Love) By</string>
    <string name="about_string_2">Corentin and Jordan Réjaud</string>
    <string name="about_string_3">" and "</string>
    <string name="about_string_4">Jordan</string>
    <string name="about_string_5">" Réjaud"</string>
    <string name="start_string">START</string>
    <string name="twitter_string">Twitter</string>
    <string name="website_string">Website</string>
    <string name="vs_string">VS</string>

    <string name="ok_string">Ok</string>
    <string name="cancel_string">Cancel</string>
    <string name="restart_string">Restart</string>

</resources>
